# impulse-ml-neural-network

./: .gitignore  CMakeLists.txt  README.MD  main.cpp
data/: input.txt  linear.csv  mnist_test_1000.csv  output.txt  test1_x.csv  test1_x_2.csv  test1_y.csv
src/Impulse/NeuralNetwork/: AbstractComputation.cpp  AbstractComputation.h  Computation.cpp  Computation.h  ComputationCpu.cpp  ComputationCpu.h  Serializer.cpp  Serializer.h  common.h  include.h  utils.cpp  utils.h
src/Impulse/NeuralNetwork/Builder/: Abstract.cpp  Abstract.h  ClassifierBuilder.cpp  ClassifierBuilder.h  ConvBuilder.cpp  ConvBuilder.h
src/Impulse/NeuralNetwork/Layer/: Abstract.cpp  Abstract.h  Abstract1D.cpp  Abstract1D.h  Abstract3D.cpp  Abstract3D.h  Conv.cpp  Conv.h  FullyConnected.cpp  FullyConnected.h  Logistic.cpp  Logistic.h  MaxPool.cpp  MaxPool.h  Purelin.cpp  Purelin.h  Relu.cpp  Relu.h  Softmax.cpp  Softmax.h  Softplus.cpp  Softplus.h  Tanh.cpp  Tanh.h
src/Impulse/NeuralNetwork/Layer/BackPropagation/: Abstract.cpp  Abstract.h  BackPropagation1DTo1D.cpp  BackPropagation1DTo1D.h  BackPropagation3DTo1D.cpp  BackPropagation3DTo1D.h  BackPropagationToConv.cpp  BackPropagationToConv.h  BackPropagationToMaxPool.cpp  BackPropagationToMaxPool.h  Factory.cpp  Factory.h
src/Impulse/NeuralNetwork/Math/: Fmincg.cpp  Fmincg.h  common.cpp  common.h
src/Impulse/NeuralNetwork/Network/: Abstract.cpp  Abstract.h  ClassifierNetwork.cpp  ClassifierNetwork.h  ConvNetwork.cpp  ConvNetwork.h
src/Impulse/NeuralNetwork/Trainer/: Abstract.cpp  Abstract.h  ConjugateGradient.cpp  ConjugateGradient.h  GradientDescent.cpp  GradientDescent.h  MiniBatch.cpp  MiniBatch.h  MiniBatchGradientDescent.cpp  MiniBatchGradientDescent.h  Stochastic.cpp  Stochastic.h  common.h
src/Impulse/NeuralNetwork/Trainer/Optimizer/: Abstract.cpp  Abstract.h  Adadelta.cpp  Adadelta.h  Adagrad.cpp  Adagrad.h  Adam.cpp  Adam.h  GradientDescent.cpp  GradientDescent.h  Momentum.cpp  Momentum.h  Nesterov.cpp  Nesterov.h  Rmsprop.cpp  Rmsprop.h
tmp/: speed.txt
